--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,7 @@
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!--uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /-->
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" / -->
     <uses-feature
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
@@ -18,6 +16,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar">
+        <activity
+            android:name=".TimerActivity"
+            android:exported="false" />
         <activity
             android:name=".FanActivity"
             android:exported="false" />
@@ -38,6 +39,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
