--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.edu.mycoolman">
+
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" / -->
@@ -34,7 +35,7 @@
             android:name=".MainActivity"
             android:exported="false" /> <!-- android:theme="@style/Theme.MyCoolMan" -->
         <activity
-            android:name=".LaunchActivity"
+            android:name=".HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
