--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,23 +17,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar">
         <activity
-            android:name=".TimerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".FanActivity"
+            android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".ListDevice"
             android:exported="false" />
-        <activity
-            android:name=".SettingActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SetColor"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" /> <!-- android:theme="@style/Theme.MyCoolMan" -->
+        <!-- android:theme="@style/Theme.MyCoolMan" -->
         <activity
             android:name=".HomeActivity"
             android:exported="true">
