--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,17 +16,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar">
+        <meta-data
+            android:name="design_width_in_dp"
+            android:value="252" />
+        <meta-data
+            android:name="design_height_in_dp"
+            android:value="522" />
+
         <activity
             android:name=".PassActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".HomeActivity"
             android:exported="false" />
         <activity
             android:name=".ListDevice"
             android:exported="false" /> <!-- android:theme="@style/Theme.MyCoolMan" -->
         <activity
-            android:name=".HomeActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
