--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,18 @@
         android:theme="@style/Theme.Design.NoActionBar">
 
     <meta-data
-            android:name="design_width_in_dp"
-            android:value="252" />
+        android:name="design_width_in_dp"
+        android:value="252" />
         <meta-data
             android:name="design_height_in_dp"
             android:value="522" />
 
         <activity
             android:name=".MainActivity"
+
+            android:exported="false" />
+        <activity
+            android:name=".SettingActivity"
 
             android:exported="false" />
         <activity
