--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,21 +16,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar">
+        <activity
+            android:name=".testActivity"
+            android:exported="false" />
 
-    <meta-data
-        android:name="design_width_in_dp"
-        android:value="252" />
+        <meta-data
+            android:name="design_width_in_dp"
+            android:value="252" />
         <meta-data
             android:name="design_height_in_dp"
             android:value="522" />
 
         <activity
             android:name=".MainActivity"
-
             android:exported="false" />
         <activity
             android:name=".SettingActivity"
-
             android:exported="false" />
         <activity
             android:name=".PassActivity"
