--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.inuker.bluetooth:library:1.4.0'
     implementation 'me.jessyan:autosize:1.2.1'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
 }
